2006-04-09  Christian Persch  <chpe@cvs.gnome.org>

	* data/default-prefs-common.js:

	Enable spatial nav extension.

2006-04-09  Christian Persch  <chpe@cvs.gnome.org>

	* data/Makefile.am:
	A data/epiphany-pango.schemas:
	* lib/ephy-prefs.h:
	* src/ephy-main.c: (main):

	Enable pango for some indic languages, which depend on it for correct
	rendering. Bug #335799.

2006-04-03  Christian Persch  <chpe@cvs.gnome.org>

	* src/bookmarks/ephy-bookmarks-editor.c:
	(ephy_bookmarks_editor_construct):

	Disable export when locked down. Bug #337028.

2006-04-03  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/MozDownload.cpp:

	Make sure we don't show "100%" on downloads unless they're really
	completed.

2006-04-03  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-dbus.c: (ephy_dbus_get_bus):
	* src/ephy-net-monitor.c:
	(ephy_net_monitor_check_for_active_device),
	(ephy_net_monitor_attach_to_dbus), (ephy_net_monitor_startup):

	Don't crash when we cannot connect to the system dbus. Bug #336557.

2006-04-02  Christian Persch  <chpe@cvs.gnome.org>

	* lib/ephy-gui.c: (ephy_gui_help_with_doc_id), (ephy_gui_help):
	* lib/ephy-gui.h:

	Add ephy_guid_help_with_doc_id for use by e-e.

2006-04-02  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/mozilla-notifiers.cpp:

	Oops, this is a string pref!

2006-04-01  Christian Persch  <chpe@cvs.gnome.org>

        * embed/mozilla/EphyPromptService.cpp:

	Fix crash when cancelling the prompt before the timeout has run.

2006-03-28  Jean-François Rameau  <jframeau@cvs.gnome.org>

	* configure.ac:

	Do not force GTK_DISABLE_DEPRECATED because we use
	gtk_object_sink which is deprecated (EphyPromptService.cpp).

	* embed/mozilla/EphyContentPolicy.cpp: (ShouldLoad).

	Mozilla backend now supports adblock.
	Fix #335919.

2006-03-23  Christian Persch  <chpe@cvs.gnome.org>

	* lib/ephy-node.c: (write_parent), (ephy_node_write_to_xml):

	Fix print format/arg mismatch.

2006-03-13  Christian Persch  <chpe@cvs.gnome.org>
