@@ -1,3 +1,9 @@
+2006-04-10  Christian Persch  <chpe@cvs.gnome.org>
+
+	* embed/mozilla/mozilla-embed.cpp:
+
+	Emit document-change event on fastback restore. Fixes bug #312785.
+
 2006-04-09  Christian Persch  <chpe@cvs.gnome.org>
 
 	* data/default-prefs-common.js:
